# QPySDL3Gamepad

./: README.md  example_simple.py  playground.py  pyproject.toml
src/qpysdl3gamepad/: QPySDL3Gamepad.py
